# mimic_manifest_mvp

./: README.md  pyproject.toml
configs/: config.yaml
data/: asset_copy.py  build_manifest.py  io_utils.py  sampling.py  stats.py
mimic_manifest_mvp_work/configs/: config.yaml
mimic_manifest_mvp_work/data/: __init__.py  config.py  io_utils.py  report_utils.py
mimic_manifest_mvp_work/scripts/: compute_stats.py
scripts/: __init__.py
tests/: conftest.py  test_manifest.py
