[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-manifest-mvp"
version = "0.1.0"
description = "Minimal patient-safe manifest builder for MIMIC-CXR + Chest ImaGenome + MS-CXR"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
